--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sanjayrastogi\AppData\Local\Temp\testng-eclipse--1173024949\testng-customsuite.xml</span>
+                    <span>C:\Users\sanjayrastogi\AppData\Local\Temp\testng-eclipse-1639160086\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.qa.opencart.tests.RegisterPageTest" class="method navigator-link" hash-for-method="userRegitrationTest">userRegitrationTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.qa.opencart.tests.AccountPageTest" class="method navigator-link" hash-for-method="acctHomePageTitleTest">acctHomePageTitleTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.qa.opencart.tests.RegisterPageTest</span>
+              <span class="class-name">com.qa.opencart.tests.AccountPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="userRegitrationTest">
-                  </a> <!-- userRegitrationTest -->
-                  <span class="method-name">userRegitrationTest</span>
+                  <a name="acctHomePageTitleTest">
+                  </a> <!-- acctHomePageTitleTest -->
+                  <span class="method-name">acctHomePageTitleTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sanjayrastogi\AppData\Local\Temp\testng-eclipse--1173024949\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sanjayrastogi\AppData\Local\Temp\testng-eclipse-1639160086\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.qa.opencart.tests.RegisterPageTest&quot;&gt;
+      &lt;class name=&quot;com.qa.opencart.tests.AccountPageTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;userRegitrationTest&quot;/&gt;
+          &lt;include name=&quot;acctHomePageTitleTest&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.qa.opencart.tests.RegisterPageTest --&gt;
+      &lt;/class&gt; &lt;!-- com.qa.opencart.tests.AccountPageTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'userRegitrationTest')
-data.setCell(0, 2, 'com.qa.opencart.tests.RegisterPageTest')
-data.setCell(0, 3, 3844);
+data.setCell(0, 1, 'acctHomePageTitleTest')
+data.setCell(0, 2, 'com.qa.opencart.tests.AccountPageTest')
+data.setCell(0, 3, 52);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 52 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,9 +214,18 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.qa.opencart.tests.AccountPageTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">acctPageHeaderListTest</span>
+                <br/>
+                <span class="ignored-method-name">acctPageHeaderCountTest</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -225,22 +234,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.opencart.tests.RegisterPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.qa.opencart.tests.AccountPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
-                <span class="method-name">registerSetUp</span>
-                <span class="method-start">4207 ms</span>
+                <span class="method-name">acctSetUp</span>
+                <span class="method-start">3635 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">userRegitrationTest</span>
-                <span class="method-start">5784 ms</span>
+                <span class="method-name">acctHomePageTitleTest</span>
+                <span class="method-start">6905 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">9632 ms</span>
+                <span class="method-start">6965 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
