--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.qa.opencart.tests.AccountPageTest.acctPageHeaderListTest</td></tr>
+<tr><td>com.qa.opencart.tests.AccountPageTest.acctPageHeaderCountTest</td></tr>
 </table>
